test/files/run/splain.check
newSource1.scala:40: error: no implicit for value e
  implicitly[T1]
            ^
